--- a/popup.html
+++ b/popup.html
@@ -1,98 +1,39 @@
-<!DOCTYPE html>
+<!-- Copyright 2017 The Chromium Authors. All rights reserved.
+Use of this source code is governed by a BSD-style license that can be
+found in the LICENSE file. -->
+<!doctype html>
 <html>
-<head>
-  <meta charset="utf-8">
-  <style>
-    body {
-      width: 600px;
-      height: 550px;
-      padding: 15px;
-      font-family: Arial, sans-serif;
-    }
-    .header {
-      text-align: center;
-      margin-bottom: 15px;
-      border-bottom: 1px solid #eee;
-      padding-bottom: 10px;
-    }
-    .status {
-      padding: 10px;
-      border-radius: 4px;
-      margin-bottom: 10px;
-      display: none;
-    }
-    .success {
-      background-color: #d4edda;
-      color: #155724;
-      border: 1px solid #c3e6cb;
-    }
-    .error {
-      background-color: #f8d7da;
-      color: #721c24;
-      border: 1px solid #f5c6cb;
-    }
-    button {
-      width: 100%;
-      padding: 8px;
-      margin: 5px 0;
-      background-color: #4CAF50;
-      color: white;
-      border: none;
-      border-radius: 4px;
-      cursor: pointer;
-    }
-    button:hover {
-      background-color: #45a049;
-    }
-    .saved-items {
-      margin-top: 5px;
-      max-height: 350px;
-      overflow-x: auto;
-    }
-    .saved-item {
-      padding: 8px;
-      border-bottom: 1px solid #eee;
-      font-size: 12px;
-        word-break: break-word;
-  white-space: normal;
-    }
-    .saved-item:last-child {
-      border-bottom: none;
-    }
-  </style>
+  <head>
+    <title>Water Popup</title>
+    <style>
+      body {
+        text-align: center;
+      }
 
-<!--  <meta http-equiv="refresh" content="30">  -->
-</head>
-<body>
+      #hydrateImage {
+        width: 100px;
+        margin: 5px;
+      }
 
-<a href="https://gist.githubusercontent.com/peterbecskei/e6551cad5738e4f01d6c2893ed8d86cf/raw/content.txt" target="_blank">
-  Last60sec content.txt
-</a>
-<meta http-equiv="refresh" content="60">
-  <div class="header" id="header">
-    <h3>Tab HTML Saver</h3>
-  </div>
+      button {
+        margin: 5px;
+        outline: none;
+      }
 
-<hr style="margin-top: 1em; padding-top: 0.5em; border: 0; border-top: 1px solid #aaa;" />
-  <div id="status" class="status"></div>
-
-  <div>
-  <label for="symatInput">Symat</label>
-  <input type="text" id="symatInput" style="width: 300px; margin-bottom: 8px;">
-</div>
-<label>
-  <input type="checkbox" id="liveFilter" checked>
-  Live
-</label>
-
-  <button id="saveCurrent">Save Current Page HTML</button>
-  <button id="viewSaved">View Saved HTML</button>
-
-  <div class="saved-items" id="savedItems">
-   <!--  <h4>Recently Saved:</h4>  -->
-    <div id="savedList"></div>
-  </div>
-
-  <script src="popup.js"></script>
-</body>
+      button:hover {
+        outline: #80deea dotted thick;
+      }
+    </style>
+    <!--
+      - JavaScript and HTML must be in separate files
+     -->
+  </head>
+  <body>
+     <img src="./icons/icon128.png" id="hydrateImage">
+     <button id="sampleSecond" value="1">Sample Second</button>
+     <button id="min15" value="15">15 Minutes</button>
+     <button id="min30" value="30">30 Minutes</button>
+     <button id="cancelAlarm">Cancel Alarm</button>
+   <script src="popup.js"></script>
+ </body>
 </html>
